--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "ownerNumber": ["6283834558105@s.whatsapp.net"],
-  "ownerName": "Neo Botz",
-  "BotName": "Neo Botz",
-  "Footer": "© Created By Lexxy Official",
-  "email": "andra0628@gmail.com",
-  "website": "https://github.com/Lexxy24",
+  "ownerNumber": ["6285221860500@s.whatsapp.net"],
+  "ownerName": "TURU Botz",
+  "BotName": "TURU Botz",
+  "Footer": "© Created By TURU",
+  "email": "@gmail.com",
+  "website": "https://github.com/",
   "region": "indonesia",
   "pathimg": "./media/neobot.jpg",
   "limitCount": 40,
